<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black_e5"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/geomanist_book"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="Login to chat 2"
            android:textColor="@color/app_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:alpha="0.4"
            android:fontFamily="@font/geomanist_book"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="/3"
            android:textColor="@color/app_black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/space_10"
        android:alpha="0.4"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="@string/choose_your_gender"
        android:textColor="@color/app_black"
        android:textSize="16sp"
        android:translationY="-0.45sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/genderGroup"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/male_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/radio_bg"
            android:checked="false"
            android:paddingStart="@dimen/space_10"
            android:text="@string/gender_male"
            android:theme="@style/Radio_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/female_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/radio_bg"
            android:checked="false"
            android:paddingStart="@dimen/space_10"
            android:text="@string/gender_female"
            android:theme="@style/Radio_theme" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        app:cornerRadius="8dp"
        app:elevation="0dp"
        android:id="@+id/gender_btn"
        android:text="@string/next_step"
        android:textAllCaps="false"
        android:foreground="?attr/selectableItemBackground"
        app:backgroundTint="@color/yellow_btn"
        app:icon="@drawable/ic_action_next_arrow"
        app:iconGravity="textEnd" />


</LinearLayout>