<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

  <ProgressBar
      android:id="@+id/pb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      />

  <TextView
      android:id="@+id/tv_limited"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/limited_to_3_coffee_shops"
      android:textColor="@color/color_primary"
      android:visibility="gone"
      style="@style/TextAppearance.Regular.Large"
      />

  <LinearLayout
      android:id="@+id/ll_already_registered"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="gone"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/you_are_already_registered"
        android:textColor="@color/color_primary"
        style="@style/TextAppearance.Regular.Large"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/color_primary"
        android:theme="@style/ThemeButton.Red"
        style="@style/TextAppearance.Light.Large"
        />

  </LinearLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cl_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      tools:visibility="visible"
      >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87"
        />

    <TextView
        android:id="@+id/tv_content_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/rush_hours_5_users"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@+id/iv_image_cafe"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        style="@style/TextAppearance.Regular.Medium"
        />

    <ImageView
        android:id="@+id/iv_image_cafe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:tint="@color/app_black_25"
        app:layout_constraintBottom_toTopOf="@+id/btn_active"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:src="@drawable/ic_photo_24dp"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_cafe"
        app:layout_constraintVertical_bias="0.2"
        tools:text="Expresso Bar"
        style="@style/TextAppearance.Book.ExtraLarge"
        />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:textColor="@color/color_primary"
        app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="75 18 Ave, New York, United States"
        style="@style/TextAppearance.Regular.Small"
        />

    <Button
        android:id="@+id/btn_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/color_accent"
        android:theme="@style/ThemeButton.Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/TextAppearance.Light.Large"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>