<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_black_e5"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/geomanist_book"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="Login to chat 1"
            android:textColor="@color/app_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:alpha="0.4"
            android:fontFamily="@font/geomanist_book"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="/3"
            android:textColor="@color/app_black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/space_10"
        android:alpha="0.4"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="@string/what_is_you"
        android:textColor="@color/app_black"
        android:textSize="16sp"
        android:translationY="-0.45sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="Enter your name"
        android:theme="@style/input_edit_style"
        app:boxBackgroundColor="@color/app_white"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:theme="@style/checkbox_theme" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_m_18_years_old_or_older"
            android:textColor="@color/app_black"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:theme="@style/checkbox_theme" />
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/term_text"
            android:layout_height="wrap_content"
            android:text="@string/agree_to_terms_of_use"
            android:textColor="@color/app_black"
            android:textSize="16sp"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/next_step"
        android:textAllCaps="false"
        app:backgroundTint="@color/yellow_btn"
        app:cornerRadius="8dp"
        app:elevation="0dp"
        app:icon="@drawable/ic_action_next_arrow"
        app:iconGravity="textEnd" />


</LinearLayout>